<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.constraint.Guideline
        android:id="@+id/first_line_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <android.support.constraint.Guideline
        android:id="@+id/first_line_three"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <android.support.constraint.Guideline
        android:id="@+id/first_line_four"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <android.support.constraint.Guideline
        android:id="@+id/second_line_one"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <android.support.constraint.Guideline
        android:id="@+id/second_line_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/second_line_three"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <ImageView
        android:id="@+id/school_icon"
        android:layout_width="197.5dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_top_left_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line"
        app:layout_constraintTop_toBottomOf="@id/school_icon" />

    <com.whzxw.uface.ether.view.Timeview.TimeView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="0s"
        app:layout_constraintBottom_toBottomOf="@id/school_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/school_icon"
        tools:text="0s" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/operator_flow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginTop="9.5dp"
        android:layout_marginEnd="7.5dp"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_adverties"
        app:layout_constraintDimensionRatio="369:161.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <android.webkit.WebView
        android:id="@+id/adwebview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="7.5dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="7.5dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="@id/first_line_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operator_flow" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/final_open"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/flow_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5.5dp"
        app:layout_constraintBottom_toBottomOf="@id/first_line_four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/open"
        app:layout_constraintTop_toTopOf="@id/first_line_three" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/open"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/open"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="5.5dp"
        app:layout_constraintBottom_toBottomOf="@id/first_line_four"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/final_open"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/first_line_three" />

    <!--<android.support.v7.widget.AppCompatButton-->
    <!--android:id="@+id/temp_open"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
    <!--android:background="@drawable/flow_button"-->
    <!--app:layout_constraintRight_toLeftOf="@id/final_open"-->
    <!--app:layout_constraintLeft_toRightOf="@id/open"-->
    <!--app:layout_constraintTop_toTopOf="@id/first_line_three"-->
    <!--app:layout_constraintBottom_toBottomOf="@id/first_line_four"/>-->


    <!--第一屏-->
    <android.support.constraint.Group
        android:id="@+id/first_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="operator_flow, open, final_open, cameralid, adwebview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--识别第二屏幕-->
    <android.support.constraint.Group
        android:id="@+id/two_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:constraint_referenced_ids="  layout, btn_back, camera_title, countdown_timer, banner" />

    <com.whzxw.uface.ether.view.LockerView
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/second_line_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/school_icon" />

    <View
        android:id="@+id/using_box_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/hadLockerColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_one" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/using_box_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/using_box"
        app:layout_constraintLeft_toRightOf="@id/using_box_image"
        app:layout_constraintTop_toTopOf="@id/second_line_one" />

    <View
        android:id="@+id/not_use_box"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:background="@color/defaultLockerColor"
        app:layout_constraintLeft_toRightOf="@id/using_box_text"
        app:layout_constraintTop_toTopOf="@id/second_line_one"
        app:layout_goneMarginLeft="80dp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/not_use_box"
        app:layout_constraintLeft_toRightOf="@id/not_use_box"
        app:layout_constraintTop_toTopOf="@id/second_line_one" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/not_use_box_number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/using_box_image" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/book_box_number"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/using_box_image" />

    <View
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="@id/second_line_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_two" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/cardview_light_background"
        android:drawableLeft="@drawable/back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/second_line_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_two" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/camera_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/second_line_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_two" />

    <com.whzxw.uface.ether.view.CountDownTimer
        android:id="@+id/countdown_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@id/second_line_three"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_two" />

    <TextureView
        android:id="@+id/rgb_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />

    <TextureView
        android:id="@+id/ir_camera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />

    <com.whzxw.uface.ether.view.FaceView
        android:id="@+id/fvRGB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />

    <com.whzxw.uface.ether.view.FaceView
        android:id="@+id/fvIR"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />

    <!--视频的遮羞布-->
    <View
        android:id="@+id/cameralid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />

    <pl.droidsonroids.gif.GifTextView
        android:id="@+id/alert"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="top|center_horizontal"
        android:text="@string/alert"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_line_three" />


</android.support.constraint.ConstraintLayout>